# ApLabGitPractice

AdadeGoya/: CMakeLists.txt  main.cpp
BTS/: CMakeLists.txt  main.cpp
BTS/Header Files/: BST.h  node.h
BTS/Resource Files/: BST.cpp  node.cpp
ChandMazrabi/: CMakeLists.txt  main.cpp
Date-Time(inheritance)/: CMakeLists.txt  main.cpp
Date-Time(inheritance)/Header Files/: Date.h  DateTime.h  Time.h
Date-Time(inheritance)/Source Files/: Date.cpp  DateTime.cpp  Time.cpp
Debug/: CMakeLists.txt  main.cpp
HANGMAN/: CMakeLists.txt  main.cpp
HapooliNoProject/: CMakeLists.txt  main.cpp
HapooliNoProject/Header Files/: student.h
HapooliNoProject/Source Files/: student.cpp
JealousSheipooli/: CMakeLists.txt  main.cpp
MathWithOOP/: CMakeLists.txt  main.cpp
MathWithOOP/Header Files/: polynomial.h
MathWithOOP/Source Files/: polynomial.cpp
MobileShopJibi/: CMakeLists.txt  main.cpp
SheipooliFamily(I Am sick of these names !)/: CMakeLists.txt  main.cpp
SheipooliFamily(I Am sick of these names !)/Header Files/: Circle.h  Coordinate.h  Rectangle.h  Triangle.h
SheipooliFamily(I Am sick of these names !)/Source Files/: Circle.cpp  Coordinate.cpp  Rectangle.cpp  Triangle.cpp
Test/: CMakeLists.txt  main.cpp
Test/Header Files/: test.h
Test/Source Files/: test.cpp
TiredHapooli/: CMakeLists.txt  main.cpp
TiredHapooli/Header Files/: matrix.h
VerasatErs/: CMakeLists.txt  main.cpp
Week7/: CMakeLists.txt  main.cpp
Week7/Header Files/: graph.h  node.h
ZamaneSheiAst/: CMakeLists.txt  main.cpp
safeOlaviatDaar/: CMakeLists.txt  main  main.cpp
