cmake_minimum_required(VERSION 3.19)
project(SheipooliFamily_I_Am_sick_of_these_names___)

set(CMAKE_CXX_STANDARD 14)

add_executable(SheipooliFamily_I_Am_sick_of_these_names___ main.cpp "Source Files/Triangle.cpp" "Header Files/Triangle.h" "Source Files/Coordinate.cpp" "Header Files/Coordinate.h" "Source Files/Rectangle.cpp" "Header Files/Rectangle.h" "Source Files/Circle.cpp" "Header Files/Circle.h")